<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GHOstapiukRssReader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connection_error">Connection Error</string>
    <string name="xml_error">Xml Error</string>
    <string name="refresh">Refresh</string>
    <string name="favorite">Favorites</string>
    <string name="favorite_add">Добавить в любимое</string>
    <string name="facebook_id_login">196320333871899</string>
    <string name="login">Профиль</string>
    <string name="user_information">Информация о пользователе</string>
    <string name="cancel">Отменить</string>
    <string name="google_sign_out">Sign out</string>
</resources>
