<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/login"
        android:title="@string/login" />
    <item
        android:id="@+id/user_information"
        android:title="@string/user_information" />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh"
        android:showAsAction="always" />
    <item
        android:id="@+id/favorite_list"
        android:title="@string/favorite"
        android:showAsAction="never" />
    <item
        android:id="@+id/favorite_add"
        android:icon="@drawable/ic_action_toggle_star_outline"
        android:title="@string/favorite_add"
        android:showAsAction="always" />
</menu>